# PF_Endian

./: CMakeLists.txt  README.md
ext/: CMakeLists.txt
src/: CMakeLists.txt
src/PF_Endian/: Endian.hpp
tests/: CMakeLists.txt  Test_BigEndian.cpp  Test_LittleEndian.cpp  main.cpp
